Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/APawn.h

	DOTNET_EXPORT auto E_PROP_APawn_AllowedYawError_GET(APawn* Ptr) { return Ptr->AllowedYawError; }
	DOTNET_EXPORT void E_PROP_APawn_AllowedYawError_SET(APawn* Ptr, float Value) { Ptr->AllowedYawError = Value; }
	
	DOTNET_EXPORT auto E_PROP_APawn_AutoPossessAI_GET(APawn* Ptr) { return Ptr->AutoPossessAI; }
	DOTNET_EXPORT void E_PROP_APawn_AutoPossessAI_SET(APawn* Ptr, EAutoPossessAI Value) { Ptr->AutoPossessAI = Value; }
	
	DOTNET_EXPORT auto E_PROP_APawn_BaseEyeHeight_GET(APawn* Ptr) { return Ptr->BaseEyeHeight; }
	DOTNET_EXPORT void E_PROP_APawn_BaseEyeHeight_SET(APawn* Ptr, float Value) { Ptr->BaseEyeHeight = Value; }
	
	DOTNET_EXPORT auto E_PROP_APawn_BlendedReplayViewPitch_GET(APawn* Ptr) { return Ptr->BlendedReplayViewPitch; }
	DOTNET_EXPORT void E_PROP_APawn_BlendedReplayViewPitch_SET(APawn* Ptr, float Value) { Ptr->BlendedReplayViewPitch = Value; }
	
	DOTNET_EXPORT auto E_PROP_APawn_Controller_GET(APawn* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->Controller); }
	DOTNET_EXPORT void E_PROP_APawn_Controller_SET(APawn* Ptr, AController* Value) { Ptr->Controller = Value; }
	
	DOTNET_EXPORT auto E_PROP_APawn_LastHitBy_GET(APawn* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->LastHitBy); }
	DOTNET_EXPORT void E_PROP_APawn_LastHitBy_SET(APawn* Ptr, AController* Value) { Ptr->LastHitBy = Value; }
	
	DOTNET_EXPORT auto E_PROP_APawn_RemoteViewPitch_GET(APawn* Ptr) { return Ptr->RemoteViewPitch; }
	DOTNET_EXPORT void E_PROP_APawn_RemoteViewPitch_SET(APawn* Ptr, uint8 Value) { Ptr->RemoteViewPitch = Value; }
	DOTNET_EXPORT auto E_APawn_AddControllerPitchInput(APawn* Self, float Val)
	{
		auto _p0 = Val;
		Self->APawn::AddControllerPitchInput(_p0);
	}
	DOTNET_EXPORT auto E_APawn_AddControllerRollInput(APawn* Self, float Val)
	{
		auto _p0 = Val;
		Self->APawn::AddControllerRollInput(_p0);
	}
	DOTNET_EXPORT auto E_APawn_AddControllerYawInput(APawn* Self, float Val)
	{
		auto _p0 = Val;
		Self->APawn::AddControllerYawInput(_p0);
	}
	DOTNET_EXPORT auto E_APawn_AddMovementInput(APawn* Self, INT_PTR WorldDirection, float ScaleValue, bool bForce)
	{
		auto _p0 = *(FVector*)WorldDirection;
		auto _p1 = ScaleValue;
		auto _p2 = bForce;
		Self->APawn::AddMovementInput(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APawn_ConsumeMovementInputVector(APawn* Self)
	{
		return (INT_PTR) new FVector(Self->ConsumeMovementInputVector());
	}
	DOTNET_EXPORT auto E_APawn_CreatePlayerInputComponent(APawn* Self)
	{
		return ConvertToManage_ObjectPointerDescription(((E_PROTECTED_WRAP_APawn*)Self)->CreatePlayerInputComponent_WRAP());
	}
	DOTNET_EXPORT auto E_APawn_DestroyPlayerInputComponent(APawn* Self)
	{
		((E_PROTECTED_WRAP_APawn*)Self)->APawn::DestroyPlayerInputComponent_WRAP();
	}
	DOTNET_EXPORT auto E_APawn_DetachFromControllerPendingDestroy(APawn* Self)
	{
		Self->APawn::DetachFromControllerPendingDestroy();
	}
	DOTNET_EXPORT auto E_APawn_FaceRotation(APawn* Self, INT_PTR NewControlRotation, float DeltaTime)
	{
		auto _p0 = *(FRotator*)NewControlRotation;
		auto _p1 = DeltaTime;
		Self->APawn::FaceRotation(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APawn_GetBaseAimRotation(APawn* Self)
	{
		return (INT_PTR) new FRotator(Self->GetBaseAimRotation());
	}
	DOTNET_EXPORT auto E_APawn_GetController(APawn* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetController());
	}
	DOTNET_EXPORT auto E_APawn_GetControlRotation(APawn* Self)
	{
		return (INT_PTR) new FRotator(Self->GetControlRotation());
	}
	DOTNET_EXPORT auto E_APawn_GetDefaultHalfHeight(APawn* Self)
	{
		return Self->GetDefaultHalfHeight();
	}
	DOTNET_EXPORT auto E_APawn_GetGravityDirection(APawn* Self)
	{
		return (INT_PTR) new FVector(Self->GetGravityDirection());
	}
	DOTNET_EXPORT auto E_APawn_GetLastMovementInputVector(APawn* Self)
	{
		return (INT_PTR) new FVector(Self->GetLastMovementInputVector());
	}
	DOTNET_EXPORT auto E_APawn_GetMovementBase(APawn* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetMovementBase());
	}
	DOTNET_EXPORT auto E_APawn_GetMovementBaseActor(APawn* Self, APawn* Pawn)
	{
		auto _p0 = Pawn;
		return ConvertToManage_ObjectPointerDescription(Self->GetMovementBaseActor(_p0));
	}
	DOTNET_EXPORT auto E_APawn_GetMovementComponent(APawn* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetMovementComponent());
	}
	DOTNET_EXPORT auto E_APawn_ReceiveUnpossessed(APawn* Self, AController* OldController)
	{
		auto _p0 = OldController;
		Self->ReceiveUnpossessed(_p0);
	}
	DOTNET_EXPORT auto E_APawn_Restart(APawn* Self)
	{
		Self->APawn::Restart();
	}
	DOTNET_EXPORT auto E_APawn_SetCanAffectNavigationGeneration(APawn* Self, bool bNewValue, bool bForceUpdate)
	{
		auto _p0 = bNewValue;
		auto _p1 = bForceUpdate;
		Self->SetCanAffectNavigationGeneration(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APawn_SetPlayerDefaults(APawn* Self)
	{
		Self->APawn::SetPlayerDefaults();
	}
	DOTNET_EXPORT auto E_APawn_SetPlayerState(APawn* Self, APlayerState* NewPlayerState)
	{
		auto _p0 = NewPlayerState;
		Self->SetPlayerState(_p0);
	}
	DOTNET_EXPORT auto E_APawn_SetRemoteViewPitch(APawn* Self, float NewRemoteViewPitch)
	{
		auto _p0 = NewRemoteViewPitch;
		Self->SetRemoteViewPitch(_p0);
	}
	DOTNET_EXPORT auto E_APawn_SetupPlayerInputComponent(APawn* Self, UInputComponent* PlayerInputComponent)
	{
		auto _p0 = PlayerInputComponent;
		((E_PROTECTED_WRAP_APawn*)Self)->APawn::SetupPlayerInputComponent_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_APawn_ShouldTakeDamage(APawn* Self, float Damage, INT_PTR DamageEvent, AController* EventInstigator, AActor* DamageCauser)
	{
		auto _p0 = Damage;
		auto& _p1 = *(FDamageEvent*)DamageEvent;
		auto _p2 = EventInstigator;
		auto _p3 = DamageCauser;
		return Self->ShouldTakeDamage(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_APawn_SpawnDefaultController(APawn* Self)
	{
		Self->APawn::SpawnDefaultController();
	}
	DOTNET_EXPORT auto E_APawn_TurnOff(APawn* Self)
	{
		Self->APawn::TurnOff();
	}
	DOTNET_EXPORT auto E_APawn_UnPossessed(APawn* Self)
	{
		Self->APawn::UnPossessed();
	}
	DOTNET_EXPORT auto E_APawn_UpdateNavAgent(APawn* Self)
	{
		Self->UpdateNavAgent();
	}
	DOTNET_EXPORT auto E_APawn_UpdateNavigationRelevance(APawn* Self)
	{
		Self->APawn::UpdateNavigationRelevance();
	}