Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/APawn.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_ReceiveUnpossessed(IntPtr self, IntPtr oldController);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_Restart(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_SetCanAffectNavigationGeneration(IntPtr self, bool bNewValue, bool bForceUpdate);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_SetPlayerDefaults(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_SetPlayerState(IntPtr self, IntPtr newPlayerState);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_SetRemoteViewPitch(IntPtr self, float newRemoteViewPitch);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_SetupPlayerInputComponent(IntPtr self, IntPtr playerInputComponent);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_APawn_ShouldTakeDamage(IntPtr self, float damage, IntPtr damageEvent, IntPtr eventInstigator, IntPtr damageCauser);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_SpawnDefaultController(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_TurnOff(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_UnPossessed(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_UpdateNavAgent(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_APawn_UpdateNavigationRelevance(IntPtr self);
		
		#endregion
		
		#region Property
		
		/// <summary>
		/// Max difference between pawn's Rotation.Yaw and GetDesiredRotation().Yaw for pawn to be considered as having reached its desired rotation
		/// </summary>
		public float AllowedYawError
		{
			get => E_PROP_APawn_AllowedYawError_GET(NativePointer);
			set => E_PROP_APawn_AllowedYawError_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Determines when the Pawn creates and is possessed by an AI Controller (on level start, when spawned, etc).
		/// <para>Only possible if AIControllerClass is set, and ignored if AutoPossessPlayer is enabled. </para>
		/// @see AutoPossessPlayer
		/// </summary>
		public EAutoPossessAI AutoPossessAI
		{
			get => (EAutoPossessAI)E_PROP_APawn_AutoPossessAI_GET(NativePointer);
			set => E_PROP_APawn_AutoPossessAI_SET(NativePointer, (byte)value);
		}

		
		/// <summary>
		/// Base eye height above collision center.
		/// </summary>
		public float BaseEyeHeight
		{
			get => E_PROP_APawn_BaseEyeHeight_GET(NativePointer);
			set => E_PROP_APawn_BaseEyeHeight_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Playback of replays writes blended pitch to this, rather than the RemoteViewPitch. This is to avoid having to compress and interpolated value.
		/// </summary>
		public float BlendedReplayViewPitch
		{
			get => E_PROP_APawn_BlendedReplayViewPitch_GET(NativePointer);
			set => E_PROP_APawn_BlendedReplayViewPitch_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Controller currently possessing this Actor
		/// </summary>
		public AController Controller
		{
			get => E_PROP_APawn_Controller_GET(NativePointer);
			set => E_PROP_APawn_Controller_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Controller of the last Actor that caused us damage.
		/// </summary>
		public AController LastHitBy
		{
			get => E_PROP_APawn_LastHitBy_GET(NativePointer);
			set => E_PROP_APawn_LastHitBy_SET(NativePointer, value);
		}

		public byte RemoteViewPitch
		{
			get => E_PROP_APawn_RemoteViewPitch_GET(NativePointer);
			set => E_PROP_APawn_RemoteViewPitch_SET(NativePointer, value);
		}

		#endregion
		
		#region ExternMethods
		
		/// <summary>
		/// Add input (affecting Pitch) to the Controller's ControlRotation, if it is a local PlayerController.
		/// <para>This value is multiplied by the PlayerController's InputPitchScale value. </para>
		/// <see cref="PlayerController"/>
		/// </summary>
		/// <param name="val">Amount to add to Pitch. This value is multiplied by the PlayerController's InputPitchScale value.</param>
		public virtual void AddControllerPitchInput(float val)
			=> E_APawn_AddControllerPitchInput(this, val);
		
		
		/// <summary>
		/// Add input (affecting Roll) to the Controller's ControlRotation, if it is a local PlayerController.
		/// <para>This value is multiplied by the PlayerController's InputRollScale value. </para>
		/// <see cref="PlayerController"/>
		/// </summary>
		/// <param name="val">Amount to add to Roll. This value is multiplied by the PlayerController's InputRollScale value.</param>
		public virtual void AddControllerRollInput(float val)
			=> E_APawn_AddControllerRollInput(this, val);
		
		
		/// <summary>
		/// Add input (affecting Yaw) to the Controller's ControlRotation, if it is a local PlayerController.
		/// <para>This value is multiplied by the PlayerController's InputYawScale value. </para>
		/// <see cref="PlayerController"/>
		/// </summary>
		/// <param name="val">Amount to add to Yaw. This value is multiplied by the PlayerController's InputYawScale value.</param>
		public virtual void AddControllerYawInput(float val)
			=> E_APawn_AddControllerYawInput(this, val);
		
		
		/// <summary>
		/// Add movement input along the given world direction vector (usually normalized) scaled by 'ScaleValue'. If ScaleValue < 0, movement will be in the opposite direction.
		/// <para>Base Pawn classes won't automatically apply movement, it's up to the user to do so in a Tick event. Subclasses such as Character and DefaultPawn automatically handle this input and move. </para>
		/// <see cref="GetPendingMovementInputVector"/>
		/// </summary>
		/// <param name="worldDirection">Direction in world space to apply input</param>
		/// <param name="scaleValue">Scale to apply to input. This can be used for analog input, ie a value of 0.5 applies half the normal value, while -1.0 would reverse the direction.</param>
		/// <param name="bForce">If true always add the input, ignoring the result of IsMoveInputIgnored().</param>
		public virtual void AddMovementInput(FVector worldDirection, float scaleValue, bool bForce)
			=> E_APawn_AddMovementInput(this, worldDirection, scaleValue, bForce);
		
		
		/// <summary>
		/// Returns the pending input vector and resets it to zero.
		/// <para>This should be used during a movement update (by the Pawn or PawnMovementComponent) to prevent accumulation of control input between frames. </para>
		/// Copies the pending input vector to the saved input vector (GetLastMovementInputVector()).
		/// </summary>
		/// <return>The</return>
		public virtual FVector ConsumeMovementInputVector()
			=> E_APawn_ConsumeMovementInputVector(this);
		
		
		/// <summary>
		/// Creates an InputComponent that can be used for custom input bindings. Called upon possession by a PlayerController. Return null if you don't want one.
		/// </summary>
		protected virtual UInputComponent CreatePlayerInputComponent()
			=> E_APawn_CreatePlayerInputComponent(this);
		
		
		/// <summary>
		/// Destroys the player input component and removes any references to it.
		/// </summary>
		protected virtual void DestroyPlayerInputComponent()
			=> E_APawn_DestroyPlayerInputComponent(this);
		
		
		/// <summary>
		/// Call this function to detach safely pawn from its controller, knowing that we will be destroyed soon.
		/// </summary>
		public virtual void DetachFromControllerPendingDestroy()
			=> E_APawn_DetachFromControllerPendingDestroy(this);
		
		
		/// <summary>
		/// Updates Pawn's rotation to the given rotation, assumed to be the Controller's ControlRotation. Respects the bUseControllerRotation* settings.
		/// </summary>
		public virtual void FaceRotation(FRotator newControlRotation, float deltaTime)
			=> E_APawn_FaceRotation(this, newControlRotation, deltaTime);
		
		
		/// <summary>
		/// Return the aim rotation for the Pawn.
		/// <para>If we have a controller, by default we aim at the player's 'eyes' direction </para>
		/// that is by default the Pawn rotation for AI, and camera (crosshair) rotation for human players.
		/// </summary>
		public virtual FRotator GetBaseAimRotation()
			=> E_APawn_GetBaseAimRotation(this);
		
		
		/// <summary>
		/// Returns controller for this actor.
		/// </summary>
		public AController GetController()
			=> E_APawn_GetController(this);
		
		
		/// <summary>
		/// Get the rotation of the Controller, often the 'view' rotation of this Pawn.
		/// </summary>
		public FRotator GetControlRotation()
			=> E_APawn_GetControlRotation(this);
		
		
		/// <summary>
		/// Returns The half-height of the default Pawn, scaled by the component scale. By default returns the half-height of the RootComponent, regardless of whether it is registered or collidable.
		/// </summary>
		public virtual float GetDefaultHalfHeight()
			=> E_APawn_GetDefaultHalfHeight(this);
		
		
		/// <summary>
		/// Returns vector direction of gravity
		/// </summary>
		public FVector GetGravityDirection()
			=> E_APawn_GetGravityDirection(this);
		
		
		/// <summary>
		/// Return the last input vector in world space that was processed by ConsumeMovementInputVector(), which is usually done by the Pawn or PawnMovementComponent.
		/// <para>Any user that needs to know about the input that last affected movement should use this function. </para>
		/// For example an animation update would want to use this, since by default the order of updates in a frame is:
		/// <para>PlayerController (device input) -> MovementComponent -> Pawn -> Mesh (animations) </para>
		/// <see cref="AddMovementInput"/>
		/// </summary>
		/// <return>The</return>
		public FVector GetLastMovementInputVector()
			=> E_APawn_GetLastMovementInputVector(this);
		
		
		/// <summary>
		/// Return PrimitiveComponent we are based on (standing on, attached to, and moving on).
		/// </summary>
		public virtual UPrimitiveComponent GetMovementBase()
			=> E_APawn_GetMovementBase(this);
		
		
		/// <summary>
		/// Gets the owning actor of the Movement Base Component on which the pawn is standing.
		/// </summary>
		public AActor GetMovementBaseActor(APawn pawn)
			=> E_APawn_GetMovementBaseActor(this, pawn);
		
		
		/// <summary>
		/// Return our PawnMovementComponent, if we have one. By default, returns the first PawnMovementComponent found. Native classes that create their own movement component should override this method for more efficiency.
		/// </summary>
		public virtual UPawnMovementComponent GetMovementComponent()
			=> E_APawn_GetMovementComponent(this);
		
